force-app/main/default/objects/OpenAI_Settings__c/OpenAI_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for OpenAI API integration</description>
    <label>OpenAI Settings</label>
</CustomObject>