force-app/main/default/objects/OpenAI_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Your OpenAI API key (starts with sk-)</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>