force-app/main/default/objects/OpenAI_Settings__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <defaultValue>&quot;https://api.openai.com/v1/chat/completions&quot;</defaultValue>
    <description>OpenAI API endpoint URL</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>