force-app/main/default/objects/OpenAI_Settings__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <defaultValue>&quot;gpt-4o-mini&quot;</defaultValue>
    <description>OpenAI model to use (e.g., gpt-4o-mini, gpt-4o, gpt-4-turbo)</description>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>